# simple-raytracer

./: CMakeLists copy.txt  CMakeLists.txt  Hw1dSample1.ppm  Hw1dSample1.txt  demo_image.ppm  demo_image.txt  earth.ppm  earth_pyramid.ppm  earth_pyramid.txt  input_desc.txt  main.cpp  purple_pyramid.txt  purple_pyramid_1.ppm  purple_pyramid_1.txt  purple_pyramid_2.ppm  purple_pyramid_2.txt  readme.md  readme.txt  reflection_test.ppm  reflection_test.txt  test.ppm  transparency_test.ppm  transparency_test.txt
Examples/: demo_image.ppm  directional-light.txt  earth.ppm  earth.txt  four_spheres.ppm  house.txt  multi-light-shadow.txt  nifty_pattern.ppm  nifty_pattern.txt  point_light.txt  purple_pyramid.ppm  purple_pyramid_1.ppm  scene_simple.ppm  scene_simple.txt  shadow_test.ppm
Examples/basic_geometry_tests/: four_spheres.ppm  purple_pyramid.ppm
Examples/material_tests/: beige_plastic.txt  dull_copper.txt  rubber_eraser.txt  shiny_silver.txt
Examples/reflection_transparency_tests/: Test1.ppm  Test1.txt  Test2.ppm  Test2.txt  Test3.ppm  Test3.txt  Test4.ppm  Test4.txt  Test5.ppm  Test5.txt  Test6.ppm  Test6.txt  test7.txt
Examples/shadow_tests/: shadow_test.ppm  shadow_test.txt
Examples/showcases/: earth.ppm  earth.txt  earth_pyramid.txt  house.ppm
src/: config.h  definitions.h  utility.h
textures/: harbor.ppm  redwood.ppm  soccerball.ppm  sunset.ppm
